--- a/index.html
+++ b/index.html
@@ -32,20 +32,21 @@
         
         <!--placar -->
         <div id="placar-container">
+            <h2>Pontuação: </h2>
             <span class="placar_box">
                 <span class="x-placar">X</span>: 
                 <span class="placar-resultado-x">0</span>
             </span>
 
             <span class="placar_box">
-                <span class="o-placar">O</span>: 
+                <span class="o-placar"></span>: 
                 <span class="placar-resultado-o">0</span>
             </span>
 
         </div>
 
         <div class="hide">
-            <div class="x"></div>
+            <div class="x">X</div>
             <div class="o"></div>
         </div>
 
